# langgraph-reflexion

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  main.py  pyproject.toml  requirements.txt  start.sh  stop.sh
examples/: MESSAGEGRAPH_TUTORIAL.md  basic_example.py  messagegraph_example.py
src/reflexion_agent/: MODULE_STRUCTURE.md  __init__.py  graph.py  main.py
src/reflexion_agent/infra/: __init__.py  config.py  llm.py  prompts.py  schema.py
src/reflexion_agent/nodes/: __init__.py  draft.py  event_loop.py  execute_tools.py  revise.py
